--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -6,9 +6,8 @@
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 	</head>
 	<body>
-		<h2>Quiz: el juego de las preguntas</h2>
 		
-		<%= respuesta%>
+		<p><%= respuesta%></p>
 		<a href="/quizes/question"> Intentelo otra vez </a>
 	</body>
 </html>
