--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -32,6 +32,10 @@
     <a href="http://es.Wikipedia.org/wiki/Quiz">
     ¿Que es un Quiz?</a>
   </footer>
+  <footer class="main" id="f2">
+     <a href="https://github.com/miguelangel9/quiz">
+      Repositorio en GitHub</a>
+  </footer>
 </div>
 </body>
 </html>
