--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,14 +1,5 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Quiz</title>	
-		<link rel='stylesheet' href='/stylesheets/style.css' />
-	</head>
-	<body>
-		
-		<p><%= respuesta%></p>
-		<a href="/quizes/question"> Intentelo otra vez </a>
-	</body>
-</html>
+<p>
+  <%= respuesta%>
+  <a href="/quizes/<%= quiz.id %>">Volver</a>
+</p>
 
