Buscador de preguntas

--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,10 @@
+
+<form method="get" action="/quizes">
+  Buscador de Preguntas: <p>
+  <input type="text" name="search" value="texto_a_buscar"/>
+  <input type="submit" value="Buscar Coincidencias">
+</form>
+
 <table>
 <% var i; for (i=0; i < quizes.length; i++) { %>
      <tr><td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
