--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"><title> Preguntas </title>
+  <meta charset="utf-8"/>
+  <title> Preguntas </title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet' 
         type='text/css'
@@ -16,7 +17,7 @@
 <body>
 <div id="page-wrap">
   <header class="main" id="h1">
-    <h2>Quiz<span>: el juego de las preguntas</span></h2>
+    <h3>Quiz<span>: el juego de las preguntas</span></h3>
   </header>
 
   <nav class="main" id="n1" role="navigation">
@@ -35,9 +36,7 @@
       </span>
     <% } %>
 
-    <div>   
-      <%- body %>
-    <div>
+    <div><%- body %></div>
   </section>
 
   <footer class="main" id="f1">
