--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -2,23 +2,25 @@
 <form method="get" action="/quizes">
   Buscador de Preguntas: <p>
   <input type="text" name="search" value="texto_a_buscar"/>
-  <input type="submit" value="Buscar Coincidencias">
+  <input type="submit" value="Buscar coincidencias">
 </form>
 
 <table>
 <% var i; for (i=0; i < quizes.length; i++) { %>
-     <tr><td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr>
-     <tr><td><a href="/quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
-
-  <td>
-     <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-     <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
-   borrar
-     </button>
-     </form>
+  <tr>
+     <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td> <td>(<%= quizes[i].tema %>)</td>
+     <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
+ 
+    <td>
+       <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
+         <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+          Borrar
+         </button>
+       </form>
   </td>
 
-</tr>
+  </tr> 
 <% } %>
 </table> 
+
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
