--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -3,13 +3,14 @@
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/> <p>
 
+
 <label for="tema" class="tem"> Selecciona un Tema: </label>
 <select id="tema" name="quiz[tema]">
 	<option value="Otro" <%= (quiz.tema === 'Otro') ? 'selected':'' %>>Otro</option>
-	<option value="Humanidades" <%= (quiz.tema === 'humanidades') ? 'selected':'' %>>Humanidades</option>
+	<option value="Humanidades" <%= (quiz.tema === 'Humanidades') ? 'selected':'' %>>Humanidades</option>
 	<option value="Ocio" <%= (quiz.tema === 'Ocio') ? 'selected':'' %>>Ocio</option>
 	<option value="Ciencia" <%= (quiz.tema === 'Ciencia') ? 'selected':'' %>>Ciencia</option>
-	<option value="Tecnologia" <%= (quiz.tema === 'Tecnologia') ? 'selected':'' %> >Tecnologia</option>
+	<option value="Tecnologia" <%= (quiz.tema === 'Tecnologia') ? 'selected':'' %>>Tecnologia</option>
 </select> <br/>
 
 
