--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -9,6 +9,7 @@
 <% var i; for (i=0; i < quizes.length; i++) { %>
   <tr>
      <td><a href="/quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td> <td>(<%= quizes[i].tema %>)</td>
+  <%if(session.user) {%>
      <td><a href="/quizes/<%= quizes[i].id %>/edit"><button>Editar</button></a></td>
  
     <td>
@@ -18,9 +19,11 @@
          </button>
        </form>
   </td>
-
+  <%}%> 
   </tr> 
 <% } %>
 </table> 
 
+  <%if(session.user) {%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+  <%}%> 
